--- a/tex/electronicsDiode.tex
+++ b/tex/electronicsDiode.tex
@@ -1172,7 +1172,7 @@ r_d =\frac{25 \times 10^{-3}}{25 \times 10^{-6}}=\SI{1000}{\ohm}
 \حصہ{طبیعیاتِ نیم موصل اشیاء}
  ڈایوڈ \اصطلاح {نیم موصل}\فرہنگ{نیم موصل}\فرہنگ{semiconductor}\حاشیہب{semiconductor} مواد سے بنائے جاتے ہیں۔اس حصہ میں نیم موصل اشیاء کی طبیعیات پر غور کیا جائے گا۔اگرچہ برقیاتی پرزہ جات جرمینیم یا سلیکان دونوں سے بنائے جا سکتے ہیں، حقیقت میں سلیکان کی عمدہ خوبیوں کی بدولت برقیاتی پرزہ جات زیادہ تر سلیکان سے ہی بنایا جاتا ہے۔اسی وجہ سے اس کتاب میں صرف سلیکان پر بات کی جائے گی۔
 
-کیمیائی \اصطلاح {دوری جدول}\فرہنگ{کیمیائی دوری جدول}\حاشیہب{periodic table}  کے چوتھے قطار یعنی چوتھے جماعت\فرہنگ{جماعت}\حاشیہب{group}  میں کاربن\عددی{\ce{C}}\حاشیہب{carbon}، سلیکان\عددی{\ce{Si}}\حاشیہب{silicon}، جرمینیم\عددی{\ce{Ge}}\حاشیہب{germanium} وغیرہ پائے جاتے ہیں۔ان تمام عناصر\حاشیہب{elements} کے ایٹمی \اصطلاح{نمونہ}{ایٹمی نمونہ}\فرہنگ{atomic model}\حاشیہب{atomic model}  کے بیرونی مدار\حاشیہب{shell} میں چار الیکٹران\حاشیہب{electrons}  پائے جاتے ہیں۔یوں ان کی \اصطلاح {کیمیائی گرفت}\فرہنگ{کیمیائی گرفت}\فرہنگ{valency}\حاشیہب{valency}  \عددی{+4}     یا \عددی{-4} ممکن ہے۔اس جماعت کے عناصر \اصطلاح {شریک گرفتی بند}\فرہنگ{شریک گرفتی بند}\فرہنگ{covalent bond}\حاشیہب{covalent bond}  بناتے ہیں۔
+کیمیائی \اصطلاح {دوری جدول}\فرہنگ{کیمیائی دوری جدول}\حاشیہب{periodic table}  کے چوتھے قطار یعنی چوتھے جماعت\فرہنگ{جماعت}\حاشیہب{group}  میں کاربن\عددی{\ce{C}}\حاشیہب{carbon}، سلیکان\عددی{\ce{Si}}\حاشیہب{silicon}، جرمینیم\عددی{\ce{Ge}}\حاشیہب{germanium} وغیرہ پائے جاتے ہیں۔ان تمام عناصر\حاشیہب{elements} کے ایٹمی \اصطلاح{نمونہ}\فرہنگ{ایٹمی نمونہ}\فرہنگ{atomic model}\حاشیہب{atomic model}  کے بیرونی مدار\حاشیہب{shell} میں چار الیکٹران\حاشیہب{electrons}  پائے جاتے ہیں۔یوں ان کی \اصطلاح {کیمیائی گرفت}\فرہنگ{کیمیائی گرفت}\فرہنگ{valency}\حاشیہب{valency}  \عددی{+4}     یا \عددی{-4} ممکن ہے۔اس جماعت کے عناصر \اصطلاح {شریک گرفتی بند}\فرہنگ{شریک گرفتی بند}\فرہنگ{covalent bond}\حاشیہب{covalent bond}  بناتے ہیں۔
 
 برقیاتی پرزہ جات بنانے کی خاطر \عددی{99.9999999} فی صد خالص سلیکان درکار ہوتا ہے جسے عموماً \اصطلاح {نو-نو صاف} سلیکان پکارا جاتا ہے۔اتنی خالص سلیکان حاصل کرنا از خود فنی مہارت کی انتہا ہے۔خالص سلیکان غیر موصل ہوتا ہے البتہ اس میں، نہایت باریک مقدار میں، مختلف اجزاء کی \اصطلاح {ملاوٹ}\فرہنگ{ملاوٹ}\فرہنگ{doping}\حاشیہب{doping}  سے اس کے \اصطلاح {موصلیت}\فرہنگ{موصلیت}\فرہنگ{conductance}\حاشیہب{conductance} کو تبدیل کر کے اسے موصل بنایا جا سکتا ہے۔اسی لئے سلیکان کو \اصطلاح {نیم موصل}\فرہنگ{نیم موصل}\حاشیہب{semiconductor}  پکارا جاتا ہے۔وزن کے لحاظ سے زمین کے بیرونی ٹھوس سطح کا \عددی{\SI{28}{\percent}} سلیکان پر مشتمل ہے۔عام ریت سلیکان اور آکسیجن کا مرکب \ce{SiO2} ہے۔
 
