--- a/tex/khalidUrduBooksElectronics.sty
+++ b/tex/khalidUrduBooksElectronics.sty
@@ -40,16 +40,15 @@
 %\linenumbers												%for line numbers in pdf
 
 
-\setmainlanguage[numerals=maghrib]{arabic}     %for english numbers use numerals=maghrib, for arabic numerals=arabicdigits
-\setotherlanguages{english}
+\setmainlanguage{urdu}
+\setotherlanguage{english}
+%\newfontfamily\urdufont[Scale=1.0]{Jameel Noori Nastaleeq}             %defining urdufont attaches it to mainlanguage{urdu} defined above
+\setmainfont[Scale=1.0]{Jameel Noori Nastaleeq}             %defining urdufont attaches it to mainlanguage{urdu} defined above
 
-
-\newfontfamily\arabicfont[Scale=1.0,Script=Arabic]{Jameel Noori Nastaleeq}
-\setmonofont{DejaVu Sans Mono}                                                                  %had to add this and the next line to get going after ubuntu upgrade
-\let\arabicfontt\ttfamily                                                                                  %had to add this and the above line to get going after ubuntu upgrade
+\setmonofont{DejaVu Sans Mono}                                                              %had to add this and the next line to get going after ubuntu upgrade
+\let\urdufontt\ttfamily                                                                                  %had to add this and the above line to get going after ubuntu upgrade
 \newfontfamily\urduTechTermsfont[Scale=1.0,Script=Arabic]{AA Sameer Sagar Nastaleeq Bold}
-\newfontfamily\urdufont[Scale=1.25,WordSpace=60.0,Script=Arabic]{Jameel Noori Nastaleeq}
-\setlength{\parskip}{5mm plus 4mm minus 3mm}
+%\setlength{\parskip}{5mm plus 4mm minus 3mm}
 
 %\newfontfamily\urdufont[Scale=1.0,Script=Arabic]{XB Tabriz}
 
