--- a/tex/electronicsOPAMP.tex
+++ b/tex/electronicsOPAMP.tex
@@ -6,7 +6,7 @@
 
 \حصہ{حسابی ایمپلیفائر کے سرے یا پنیے}
 	
-حسابی ایمپلیفائر کی علامت شکل \حوالہ{شکل_حسابی_ایمپلیفائر_کی_علامت} الف  میں دکھائی گئی ہے۔حسابی ایمپلیفائر کے عموماً تین سرے ہوتے ہیں جن میں سے دو اس کے داخلی اور ایک خارجی سرا ہوتا ہے۔یوں شکل-الف میں ایک نمبر پنیا\حاشیہد{پنیوں کو نمبر کرنے کا طریقہ جلد بتلایا جائے گا} اس کا خارجی سرا ہے جبکہ دو اور تین نمبر پنیے اس کے داخلی سرے ہیں۔شکل  الف     میں حسابی ایمپلیفائر کی علامت میں دو مزید طاقت کے سرے بھی دکھائے گئے ہیں جو حسابی ایمپلیفائر کو برقی طاقت مہیا کرنے کی خاطر استعمال ہوتے ہیں۔حسابی ایمپلیفائر اُسی وقت کام کر سکتا ہے جب ان طاقت کے پنیوں پر درکار برقی طاقت مہیا کی جائے۔شکل \حوالہ{شکل_حسابی_ایمپلیفائر_کی_علامت} ب میں چار نمبر سرا مثبت برقی طاقت کا سرا ہے لہٰذا اس  پر مثبت برقی دباو مہیا کی گئی ہے  جبکہ گیارہ نمبر سرا منفی طاقت کا سرا ہے لہٰذا اس  پر منفی برقی دباو مہیا کی گئی ہے۔حسابی ایمپلیفائر ان مہیا کردہ برقی دباو سے برقی طاقت حاصل کرتا ہے۔روایتی طور پر مثبت برقی دباو کو \عددی{V_{CC}} اور منفی برقی دباو  کو \عددی{V_{EE}} پکارا جاتا ہے۔یوں شکل میں \عددی{V_{CC}=\SI{+12}{\volt}}اور \عددی{V_{EE}=\SI{-12}{\volt}}ہیں۔
+حسابی ایمپلیفائر کی علامت شکل \حوالہ{شکل_حسابی_ایمپلیفائر_کی_علامت} الف  میں دکھائی گئی ہے۔حسابی ایمپلیفائر کے عموماً تین سرے ہوتے ہیں جن میں سے دو اس کے داخلی اور ایک خارجی سرا ہوتا ہے۔یوں شکل-الف میں ایک نمبر پنیا\حاشیہد{پنیوں کو نمبر کرنے کا طریقہ جلد بتلایا جائے گا} اس کا خارجی سرا ہے جبکہ دو اور تین نمبر پنیے اس کے داخلی سرے ہیں۔شکل  ب     میں حسابی ایمپلیفائر کی علامت میں دو مزید طاقت کے سرے بھی دکھائے گئے ہیں جو حسابی ایمپلیفائر کو برقی طاقت مہیا کرنے کی خاطر استعمال ہوتے ہیں۔حسابی ایمپلیفائر اُسی وقت کام کر سکتا ہے جب ان طاقت کے پنیوں پر درکار برقی طاقت مہیا کی جائے۔شکل \حوالہ{شکل_حسابی_ایمپلیفائر_کی_علامت} ب میں چار نمبر سرا مثبت برقی طاقت کا سرا ہے لہٰذا اس  پر مثبت برقی دباو مہیا کی گئی ہے  جبکہ گیارہ نمبر سرا منفی طاقت کا سرا ہے لہٰذا اس  پر منفی برقی دباو مہیا کی گئی ہے۔حسابی ایمپلیفائر ان مہیا کردہ برقی دباو سے برقی طاقت حاصل کرتا ہے۔روایتی طور پر مثبت برقی دباو کو \عددی{V_{CC}} اور منفی برقی دباو  کو \عددی{V_{EE}} پکارا جاتا ہے۔یوں شکل میں \عددی{V_{CC}=\SI{+12}{\volt}}اور \عددی{V_{EE}=\SI{-12}{\volt}}ہیں۔
 \begin{figure}
 \centering
 \includegraphics[scale=0.90]{opampSymbol}
@@ -95,7 +95,7 @@ v_0 &=A_d \times v_d \\
 v_0 &=A_d \times v_d \\
 &=A_d \times \left (v_2 - v_1 \right )\\
 &=100000 \times \left(2.00005-2.00003 \right )\\
-&\approx \SI{2}{\volt}
+&=\SI{2}{\volt}
 \end{aligned}$
 
 \item $\begin{aligned}[t]
@@ -104,6 +104,7 @@ v_0 &=A_d \times v_d \\
 &=100000 \times \left(2.0005-2.0003 \right )\\
 &=\SI{20}{\volt}
 \end{aligned}$
+
 چوتھے صورت میں \عددی{v_o} کی قیمت مساوات \حوالہ{مساوات_حسابی_کے_خارجی_حدود} میں دیے حدود سے تجاوز کر گئی جو کہ ناممکن صورتِ حال ہے۔لہٰذا اس جواب کو رد کیا جاتا ہے۔اس صورت میں حسابی ایمپلیفائر کی کوشش ہو گی کہ \عددی{v_o} کی قیمت بیس وولٹ ہو لیکن حسابی ایمپلیفائر ایسا کرنے سے عاجز ہے  کیونکہ اس کے خارجی اشارے  کی قیمت \عددی{V_{CC}} کی قیمت سے زیادہ نہیں ہو سکتی۔لہٰذا  \عددی{ \Delta_+ = \Delta_- = 0} لیتے ہوئے اس صورت میں  \عددی{v_o}زیادہ سے زیادہ ممکنہ برقی دباو کے برابر ہو گا یعنی \عددی{v_o = +12 V}ہو گا۔حقیقت میں  \عددی{v_o}کی زیادہ سے زیادہ ممکنہ قیمت\عددی{V_{CC}}  سے ایک یا دو وولٹ کم ہوتی ہے۔حسابی ایمپلیفائر بنانے والے یہ معلومات فراہم کرتے ہیں۔
 \item $\begin{aligned}[t]
 v_0 &=A_d \times v_d \\
@@ -111,6 +112,7 @@ v_0 &=A_d \times v_d \\
 &=100000 \times \left(2.03-2.05 \right )\\
 &=\SI{-2000}{\volt}
 \end{aligned}$
+
 یہاں \عددی{v_o} کی قیمت مساوات \حوالہ{مساوات_حسابی_کے_خارجی_حدود}  میں دیے حدود سے تجاوز کر گئی جو کہ ناممکن صورتِ حال ہے۔اس صورت میں  \عددی{v_o}کی قیمت  \عددی{V_{EE}} سے قدر زیادہ قیمت اختیار کرے گی۔ \عددی{\Delta_+ = \Delta_- = 0}لیتے ہوئے اس صورت\عددی{v_o=\SI{-12}{\volt}} ہو گی۔
 \item $\begin{aligned}[t]
 v_0 &=A_d \times v_d \\
@@ -162,7 +164,7 @@ $A_d$  & $\SI[per=frac,fraction=nice]{100000}{\volt \per \volt}$ \\
 
 \جزوحصہ{داخلی سروں پر برابر برقی دباو رہتا ہے}
 
-حسابی ایمپلیفائر کو عام طور خطی کارکردگی کے احاطے میں استعمال کیا جاتا ہے یعنی اسے  استعمال کرتے ہوئے  \عددی{v_d} کی قیمت اتنی رکھی جاتی ہے کہ \عددی{v_o} مساوات \حوالہ{مساوات_حسابی_کے_خارجی_حدود} میں دیے حدود کے اندر رہے۔\عددی{V_{CC}=\SI{+12}{\volt}} اور \عددی{V_{EE}=\SI{-12}{\volt}} لیتے ہوئے \عددی{v_o} کی زیادہ سے زیادہ ممکنہ قیمت تقریباً \عددی{\SI{+12}{\volt}}اور کم سے کم ممکنہ قیمت تقریباً \عددی{\SI{-12}{\volt}} ہے۔جب \عددی{v_o = \SI{+12}{\volt}}ہو،  اس وقت مساوات \حوالہ{مساوات_حسابی_بنیادی_کارکردگی}  کے تحت \عددی{v_d =\SI{120}{\micro \volt}} ہو گا اور جب  \عددی{v_o = \SI{-12}{\volt}} ہو اس وقت\عددی{v_d =\SI{-120}{\micro \volt}} ہو گا۔یوں حسابی ایمپلیفائر کو خطی خطے میں استعمال کرتے ہوئے \عددی{\abs{v_d} < \SI{120}{\micro \volt}} رہے گا۔شکل \حوالہ{شکل_حسابی_ایمپلیفائر_کی_کارکردگی}  کو دیکھتے ہوئے اس بات کو یوں بیان کر سکتے ہیں کہ
+حسابی ایمپلیفائر کو عام طور  پر خطی کارکردگی کے احاطے میں استعمال کیا جاتا ہے یعنی اسے  استعمال کرتے ہوئے  \عددی{v_d} کی قیمت اتنی رکھی جاتی ہے کہ \عددی{v_o} مساوات \حوالہ{مساوات_حسابی_کے_خارجی_حدود} میں دیے حدود کے اندر رہے۔\عددی{V_{CC}=\SI{+12}{\volt}} اور \عددی{V_{EE}=\SI{-12}{\volt}} لیتے ہوئے \عددی{v_o} کی زیادہ سے زیادہ ممکنہ قیمت تقریباً \عددی{\SI{+12}{\volt}}اور کم سے کم ممکنہ قیمت تقریباً \عددی{\SI{-12}{\volt}} ہے۔جب \عددی{v_o = \SI{+12}{\volt}}ہو،  اس وقت مساوات \حوالہ{مساوات_حسابی_بنیادی_کارکردگی}  کے تحت \عددی{v_d =\SI{120}{\micro \volt}} ہو گا اور جب  \عددی{v_o = \SI{-12}{\volt}} ہو اس وقت\عددی{v_d =\SI{-120}{\micro \volt}} ہو گا۔یوں حسابی ایمپلیفائر کو خطی خطے میں استعمال کرتے ہوئے \عددی{\abs{v_d} < \SI{120}{\micro \volt}} رہے گا۔شکل \حوالہ{شکل_حسابی_ایمپلیفائر_کی_کارکردگی}  کو دیکھتے ہوئے اس بات کو یوں بیان کر سکتے ہیں کہ
 \begin{align}
 \abs{v_d} =\abs{v_2-v_1} < \SI{120}{\micro \volt}
 \end{align}
@@ -368,7 +370,7 @@ i_3=0
 \begin{gather} 
 \begin{aligned}\label{مساوات_منفی_بقایا_داخلی_رو}
 i_1& =\frac{v_n-v_s}{R_1}\\
-i_2 &=\frac{n_n-v_o}{R_2}
+i_2 &=\frac{v_n-v_o}{R_2}
 \end{aligned}
 \end{gather}
 مساوات \حوالہ{مساوات_حسابی_منفی_سرے_پر_صفر_رو}  اور \حوالہ{مساوات_منفی_بقایا_داخلی_رو}  کو مساوات \حوالہ{مساوات_منفی_منفی_مداخل_کے_جوڑ_پر_رو}  میں استعمال کرتے حاصل ہوتا ہے
