--- a/tex/electronicsDiode.tex
+++ b/tex/electronicsDiode.tex
@@ -589,11 +589,11 @@ v_C= v_I-v_D-V_r \approx v_p - V_r
 
 \حصہ{برقیاتی تراش}
 
-شکنجہ کے دور میں کپیسٹر کی جگہ مزاحمت استعمال کرنے سے \اصطلاح {برقیاتی تراش}\فرہنگ{تراش}\فرہنگ{clipper}\حاشیہب{clipper}  کا دور حاصل ہوتا ہے جسے شکل \حوالہ{شکل_ایک_طرف_کا_تراش} میں دکھایا گیا ہے۔\اصطلاح {برقیاتی تراش} یا \اصطلاح {تراش} ایک ایسا دور ہے جو اشارہ کے چوٹی کو ایک خاص حد سے تجاوز نہیں کرنے دیتا بلکہ اسے کاٹ دیتا ہے۔دکھایا دور صرف ایک جانب کی چوٹی کاٹتا ہے لہٰذا اس کو \اصطلاح {ایک طرف کا تراش} کہا جائے گا۔
+شکنجہ کے دور میں کپیسٹر کی جگہ مزاحمت استعمال کرنے سے \اصطلاح {برقیاتی تراش}\فرہنگ{تراش}\فرہنگ{clipper}\حاشیہب{clipper}  کا دور حاصل ہوتا ہے جسے شکل \حوالہ{شکل_ایک_طرف_کا_تراش} میں دکھایا گیا ہے۔\اصطلاح {برقیاتی تراش} یا \اصطلاح {تراش} ایک ایسا دور ہے جو اشارہ کے چوٹی کو ایک خاص حد سے تجاوز نہیں کرنے دیتا بلکہ اسے کاٹ دیتا ہے۔دکھایا دور صرف ایک جانب کی چوٹی کاٹتا ہے لہٰذا اس کو \اصطلاح {یک طرفہ  تراش} کہا جائے گا۔
  \begin{figure}
 \centering
 \includegraphics[scale=0.90]{clipperOneSided}
-\caption{ایک طرف کا تراش}
+\caption{یک طرفہ  تراش}
 \label{شکل_ایک_طرف_کا_تراش}
 \end{figure}
 جب تک داخلی برقی دباو کی قیمت \عددی{V_r} سے کم ہو ڈایوڈ الٹ مائل یعنی منقطع رہتا ہے۔اس صورت میں خارجی برقی دباو داخلی برقی دباو کے برابر رہے گا یعنی ہو گا اور مزاحمت \عددی{R}  میں برقی رو کی مقدار صفر ایمپیئر رہے گی۔جیسے ہی داخلی برقی دباو  کی قیمت \عددی{V_r} سے تجاوز کر جائے ڈایوڈ سیدھا مائل ہو جاتا ہے۔ جتنی دیر  \عددی{v_I>V_r} رہے اتنی دیر کے لئے  ڈایوڈ کو چالو سوئچ سمجھا جا سکتا ہے اور یوں اس دوران خارجی برقی دباو کی قیمت \عددی{V_r} رہے گی۔اس دوران مزاحمت اور ڈایوڈ دونوں میں برقی رو کی مقدار
@@ -602,11 +602,11 @@ i_R=\frac{v_I-V_r}{R}
 \end{align*}
 ہو گی۔
 
-آپ نے دیکھا کہ یہ دور داخلی برقی دباو کو \عددی{V_r} پر تراشتا ہے۔اس دور میں دو ڈایوڈ کے استعمال سے دو اطراف کا تراش حاصل ہوتا ہے جسے شکل \حوالہ{شکل_دو_اطراف_کا_تراش}  میں دکھایا گیا ہے۔
+آپ نے دیکھا کہ یہ دور داخلی برقی دباو کو \عددی{V_r} پر تراشتا ہے۔اس دور میں دو ڈایوڈ کے استعمال سے \اصطلاح{دو  طرفہ  تراش}\فرہنگ{تراش!دو طرفہ}\حاشیہب{double sided clipper} حاصل ہوتا ہے جسے شکل \حوالہ{شکل_دو_اطراف_کا_تراش}  میں دکھایا گیا ہے۔
 \begin{figure}
 \centering
 \includegraphics[scale=0.90]{clipperDoubleSided}
-\caption{دو اطراف کا تراش}
+\caption{دو طرفہ  تراش}
 \label{شکل_دو_اطراف_کا_تراش}
 \end{figure}
 اس دور میں جب تک \عددی{v_I} کی قیمت مثبت ہو ڈایوڈ \عددی{D_2} الٹا مائل رہتا ہے۔یوں مثبت داخلی برقی دباو کے لئے یہ دور بالکل پچھلے دئے گئے ایک طرف کے تراش کی طرح کام کرتا ہے اور داخلی اشارہ کے مثبت چوٹی کو \عددی{V_{r1}} پر تراشتا ہے۔
