--- a/tex/electronicsBJT.tex
+++ b/tex/electronicsBJT.tex
@@ -35,7 +35,7 @@
 \bottomrule
 \end{tabular}
 \end{table}
-ٹرانزسٹر کو بطورِ ایمپلیفائر استعمال کرنے کی خاطر اسے \اصطلاح{افزائندہ حال}   میں رکھا جاتا ہے۔\اصطلاح{عددی} ادوار\حاشیہب{digital circuits}  میں ٹرانزسٹر کے \اصطلاح{غیر افزائندہ} حال  اور \اصطلاح{منقطع} حال  دونوں استعمال ہوتے ہیں۔ 
+ٹرانزسٹر کو بطورِ ایمپلیفائر استعمال کرنے کی خاطر اسے \اصطلاح{افزائندہ }\فرہنگ{افزائندہ }\حاشیہب{active}\فرہنگ{active} حال    میں رکھا جاتا ہے۔\اصطلاح{عددی} ادوار\حاشیہب{digital circuits}  میں ٹرانزسٹر کے \اصطلاح{غیر افزائندہ}\فرہنگ{غیر افزائندہ}\حاشیہب{saturation}\فرہنگ{saturation} حال  اور \اصطلاح{منقطع}\فرہنگ{منقطع}\حاشیہب{cutoff}\فرہنگ{cutoff}  حال  دونوں استعمال ہوتے ہیں۔ 
 
 \حصہ{افزائندہ حال منفی-جمع-منفی \عددی{npn} ٹرانزسٹر کی کارکردگی}
 	شکل \حوالہ{شکل_ٹرانزسٹر_مائل_کرنا}  میں منفی-جمع-منفی \عددی{npn} ٹرانزسٹر کو اس طرح برقی دباو مہیا کئے گئے ہیں کہ اس کا بیس-ایمٹر  \عددی{BE}  جوڑ سیدھا مائل جبکہ اس کا بیس-کلکٹر \عددی{BC}  جوڑ اُلٹا مائل ہو۔یوں بیس-ایمٹر  \عددی{BE} جوڑ پر پیدا ویران  خطے  کی لمبائی کم ہو جائے گی جبکہ بیس-کلکٹر \عددی{BC}  جوڑ پر پیدا ویران  خطے کی لمبائی بڑھ جائے گی۔شکل میں منفی-جمع-منفی \عددی{npn} ٹرانزسٹر کے برقی سروں پر برقی رو کی سمتیں دکھائی گئی ہیں۔شکل میں بیس خطے کے لمبائی کو بڑھا چڑھا کر دکھایا گیا ہے۔\عددی{npn} ٹرانزسٹر کی کارکردگی کا دارومدار دو \عددی{n} خطوں کا انتہائی قریب قریب ہونے پر ہے۔یوں حقیقت میں بیس خطے کی لمبائی چند مائیکرو میٹر \عددی{\si{\micro \meter}} ہوتی ہے۔
