--- a/tex/electronicsBJT.tex
+++ b/tex/electronicsBJT.tex
@@ -179,7 +179,7 @@ I_C=\alpha I_E+I_{CB0}
 \end{align}
 کے برابر ہے۔\عددی{I_{CB0}} کی قیمت درجہ حرارت \عددی{\SI{10}{\celsius}} بڑھانے سے تقریباً دگنی ہوتی ہے۔جدید ٹرانزسٹروں میں \عددی{I_{CB0}} قابل نظر انداز ہوتا ہے لہٰذا اس کتاب میں ہم \عددی{I_{CB0}} کو نظر انداز کریں گے۔
 
-\عددی{npn} ٹرانزسٹر اسی صورت \اصطلاح{افزائندہ}\فرہنگ{افزائندہ}  رہتا ہے جب اس کے بیس-ایمٹر  جوڑ کو \اصطلاح{سیدھا مائل} جبکہ اس کے بیس-کلکٹر جوڑ کو \اصطلاح{غیر چالو} رکھا جائے۔یوں ٹرانزسٹر کو \اصطلاح{افزائندہ حال} رکھنے کی خاطر اس کے بیس-کلکٹر جوڑ پر برقی دباو \عددی{V_{BE}} مثبت رکھی جاتی ہے جبکہ اس کے بیس-کلکٹر جوڑ پر برقی دباو \عددی{V_{BC}} کو یا تو منفی رکھا جاتا ہے اور یا اسے \اصطلاح{چالو کردہ برقی دباو} یعنی \عددی{\SI{0.5}{\volt}} سے کم رکھا جاتا ہے۔سیدھے مائل بیس-ایمٹر  جوڑ پر کسی بھی سیدھے مائل جمع-منفی جوڑ کی طرح برقی دباو کو\عددی{\SI{0.7}{\volt}}  تصور کیا جاتا ہے۔
+\عددی{npn} ٹرانزسٹر اسی صورت \اصطلاح{افزائندہ}\فرہنگ{افزائندہ}  رہتا ہے جب اس کے بیس-ایمٹر  جوڑ کو \اصطلاح{سیدھا مائل} جبکہ اس کے بیس-کلکٹر جوڑ کو \اصطلاح{غیر چالو} رکھا جائے۔یوں ٹرانزسٹر کو \اصطلاح{افزائندہ حال} رکھنے کی خاطر اس کے  بیس-ایمٹر جوڑ پر برقی دباو \عددی{V_{BE}} مثبت رکھی جاتی ہے جبکہ اس کے بیس-کلکٹر جوڑ پر برقی دباو \عددی{V_{BC}} کو یا تو منفی رکھا جاتا ہے اور یا اسے \اصطلاح{چالو کردہ برقی دباو} یعنی \عددی{\SI{0.5}{\volt}} سے کم رکھا جاتا ہے۔سیدھے مائل بیس-ایمٹر  جوڑ پر کسی بھی سیدھے مائل جمع-منفی جوڑ کی طرح برقی دباو کو\عددی{\SI{0.7}{\volt}}  تصور کیا جاتا ہے۔
 
 
 اب تک کے بحث میں \عددی{\beta} کو مستقل تصور کیا گیا۔درحقیقت میں \عددی{\beta} کی قیمت ازخود \عددی{i_C} پر منحصر ہوتی ہے۔شکل \حوالہ{شکل_افزائش_بالمقابم_برقی_رو} میں کسی ایک ٹرانزسٹر کو مثال بناتے ہوئے  \عددی{\beta} اور \عددی{i_C} کا تعلق دکھایا گیا ہے۔کسی بھی ٹرانزسٹر کو عموماً کسی خاص برقی رو کے لگ بھگ استعمال کیا گیا جاتا ہے۔شکل میں اس کی نشاندہی کی گئی ہے۔آپ دیکھ سکتے ہیں کہ اس خطے میں \عددی{\beta} کی قیمت بہت زیادہ  تبدیل نہیں ہوتی اور یوں \عددی{\beta} میں تبدیلی کو نظر انداز کرتے ہوئے  اس خطے میں  اوسط \عددی{\beta} کے قیمت کو ٹرانزسٹر کا \عددی{\beta} تصور کیا جاتا  ہے۔اس کتاب میں \عددی{i_C} کے تبدیدلی سے  \عددی{\beta} کے تبدیدلی کو نظر انداز کیا جائے گا۔ 
@@ -227,7 +227,7 @@ h_{fe}=\frac{\Delta i_C}{\Delta i_B}=\frac{i_c}{i_b}
 \عددی{npn} ٹرانزسٹر کے سیدھے مائل بیس-ایمٹر  جوڑ پر \عددی{V_{BE}=\SI{0.7}{\volt}} پایا جاتا ہے اور \عددی{\زیرنوشت{V}{CE}{غیرافزائندہ}=\SI{0.2}{\volt}}  پر ٹرانزسٹر غیر افزائندہ ہو جاتا ہے۔\عددی{pnp} ٹرانزسٹر میں بھی ایسا ہی ہوتا ہے پس جوڑ کے نام الٹے لکھنے پڑتے ہیں یعنی \عددی{pnp} کے سیدھے مائل ایمٹر-بیس جوڑ پر \عددی{V_{EB}=\SI{0.7}{\volt}} پایا جاتا ہے اور \عددی{\زیرنوشت{V}{EC}{غیرافزائندہ}=\SI{0.2}{\volt}}  پر ٹرانزسٹر غیر افزائندہ ہو جاتا ہے۔
 
 \حصہ{نقطہ کارکردگی اور یک سمت ادوار کا تحلیلی تجزیہ}
-ٹرانزسٹر کے ساتھ مزاحمت (مزاحمتیں) اور یک سمت منبع برقی دباو  (برقی رو) منسلک کر کے اسے تین مختلف طرز پر چلایا جا سکتا ہے۔ان تین طریقوں کو جدول  میں بیان کیا گیا ہے۔ٹرانزسٹر کے نقطہِ کارکردگی (نقطہِ مائل) پر اس کے یک سمت برقی رو کو \عددیء{I_B}، \عددیء{I_C}،\عددی{I_E} اور یک سمت برقی دباو کو   \عددیء{V_{CE}}، \عددیء{V_{BE}}، \عددی{V_{BC}} لکھتے ہیں۔ ڈایوڈ کے نقطہِ مائل کی طرز پر ان قیمتوں کے لکھنے کا درست انداز  \عددیء{I_{BQ}}، \عددیء{I_{CQ}}، \عددیء{I_{EQ}}، \عددی{V_{CEQ}} وغیرہ ہے۔اس کتاب میں جہاں غلطی کی گنجائش نہ ہو وہاں ان قیمتوں کو پہلی طرز پر لکھا جائے گا جیسے  \عددی{I_{CQ}} کو   \عددی{I_C} لکھا جائے گا۔
+ٹرانزسٹر کے ساتھ مزاحمت (مزاحمتیں) اور یک سمت منبع برقی دباو  (برقی رو) منسلک کر کے اسے تین مختلف طرز پر چلایا جا سکتا ہے۔ان تین طریقوں کو جدول \حوالہ{جدول_ٹرانزسٹر_کے_تین_مختلف_انداز_کارکردگی}   میں بیان کیا گیا ہے۔ٹرانزسٹر کے نقطہِ کارکردگی (نقطہِ مائل) پر اس کے یک سمت برقی رو کو \عددیء{I_B}، \عددیء{I_C}،\عددی{I_E} اور یک سمت برقی دباو کو   \عددیء{V_{CE}}، \عددیء{V_{BE}}، \عددی{V_{BC}} لکھتے ہیں۔ ڈایوڈ کے نقطہِ مائل کی طرز پر ان قیمتوں کے لکھنے کا درست انداز  \عددیء{I_{BQ}}، \عددیء{I_{CQ}}، \عددیء{I_{EQ}}، \عددی{V_{CEQ}} وغیرہ ہے۔اس کتاب میں جہاں غلطی کی گنجائش نہ ہو وہاں ان قیمتوں کو پہلی طرز پر لکھا جائے گا جیسے  \عددی{I_{CQ}} کو   \عددی{I_C} لکھا جائے گا۔
 
 اس حصے میں ٹرانزسٹر کے یک سمت ادوار حل کرنے پر غور کیا جائے گا جہاں ٹرانزسٹر کے مختلف حال یعنی \اصطلاح{افزائندہ} حال، \اصطلاح{غیر افزائندہ} حال اور \اصطلاح{منقطع} حال باری باری دیکھے جائیں گے۔
 
@@ -390,7 +390,7 @@ R_E&=\SI{1}{\kilo \ohm}
 حل:بیس جانب کرخوف کے قانون برائے برقی دباو کی مدد سے 
 \begin{align*}
 V_{BB}&=\left(I_B+I_C \right) R_E+V_{EB}\\
-&=IE R_E +V_{EB}
+&=I_E R_E +V_{EB}
 \end{align*}
 لکھا جا سکتا ہے جہاں دوسرے قدم پر \عددی{I_B+I_C} کو \عددی{I_E} لکھا گیا ہے۔یوں
 \begin{align*}
@@ -400,7 +400,7 @@ I_C &\approx I_E =\SI{0.5}{\milli \ampere}
 حاصل ہوتا ہے۔اسی طرح کرخوف کے قانون برائے برقی دباو کی مدد سے
 \begin{align*}
 V_{CC}&=\left(I_B+I_C \right)R_E+V_{EC}+I_C R_C\\
-&=I_E  RE + I_C R_C +V_{EC}
+&=I_E  R_E + I_C R_C +V_{EC}
 \end{align*}
 لکھا جا سکتا ہے۔اگر \عددی{I_E \approx I_C} لیا جائے تب
 \begin{align*}
