--- a/tex/myUrduCommands.tex
+++ b/tex/myUrduCommands.tex
@@ -75,7 +75,10 @@
 \newcommand*{\سیدھازیرنوشت}[2]{\: \ensuremath{{#1_{\textup{#2}}}} \:} %RC
 
 \newcommand*{\قریب}[1]{\mbox{#1}}  %dissallows splitting along two lines 
-\newcommand{\سن}[1]{؁\,\ensuremath{#1}}
+%\newcommand{\سن}[1]{؁\,\ensuremath{#1}}
+\newcommand{\سن}[1]{
+#1 ؁
+}
 \newcommand{\زور}[1]{\aemph{#1}} %overline urdu text to emphasize
 
 
