--- a/tex/electronicsBJT.tex
+++ b/tex/electronicsBJT.tex
@@ -646,7 +646,7 @@ I_E&=\frac{V_{BB}-V_{EB}}{R_E+\frac{R_B}{\beta+1}}\\
 حاصل ہوتا ہے۔اسی طرح ہم لکھ سکتے ہیں۔
 \begin{align*}
 V_{CC}&=I_E R_E +V_{EC}+I_C R_C\\
-&\approx V_{EB}+I_C \left(R_E+R_C \right)
+&\approx V_{EC}+I_C \left(R_E+R_C \right)
 \end{align*}
 جس سے
 \begin{align*}
