--- a/tex/electronicsBJT.tex
+++ b/tex/electronicsBJT.tex
@@ -593,7 +593,7 @@ R_B &=\SI{3.3}{\kilo \ohm}\\
 \begin{align*}
 V_{BB}&=I_B R_B +V_{BE}+I_E R_E\\
 &=\left(\frac{I_E}{\beta+1}\right) R_B +V_{BE}+I_E R_E\\
-&=\left(\frac{R_B}{\beta+1} \right) I_E +V_{BE}
+&=\left(\frac{R_B}{\beta+1} +R_E \right) I_E +V_{BE}
 \end{align*}
 لکھا جا سکتا ہے جس سے
 
