--- a/tex/electronicsBJT.tex
+++ b/tex/electronicsBJT.tex
@@ -1005,7 +1005,7 @@ I_{E2}&=\SI{0.991}{\milli \ampere}
 \end{align*}
 حاصل ہوتا ہے۔یوں
 \begin{align*}
-V_{E2}&=I_{E2} R_E2=0.991 \times 10^{-3} \times 3600=\SI{3.5676}{\volt}\\
+V_{E2}&=I_{E2} R_{E2}=0.991 \times 10^{-3} \times 3600=\SI{3.5676}{\volt}\\
 V_{B2}&=V_{E2}+V_{BE2}=3.5676+0.7=\SI{4.2676}{\volt}\\
 V_{B1}&=V_{E1}+V_{BE1}=V_{B2}+V_{BE1}=\SI{4.9676}{\volt}\\
 V_{C2}& \approx 20-0.991 \times 10^{-3} \times  8200=\SI{11.87}{\volt}
